# backend/src/Chamados.Api/Models/Dtos/Auth/UsuarioDepartamentosRequest.cs
@@ -1,0 +1,6 @@
+namespace Chamados.Api.Models.Dtos.Auth;
+
+public class UsuarioDepartamentosRequest
+{
+    public long[] IdsDepartamentos { get; set; } = Array.Empty<long>();
+}
