# backend/src/Chamados.Api/Models/Dtos/Chamados/EncaminharDepartamentoRequest.cs
@@ -1,0 +1,6 @@
+namespace Chamados.Api.Models.Dtos.Chamados;
+
+public class EncaminharDepartamentoRequest
+{
+    public long IdDepartamento { get; set; }
+}
